styles.css
:root {
    --main-bg-color: #362222;
    --font-color: #;
    --main-prompt-color: #71d534;
    --sec-prompt-color: #6197cd;
}

* {
    font-family:monospace!important;
}


body {
    background-color:var(--main-bg-color)!important;
}

button,
a,
.icon {
    color: var(--sec-prompt-color)!important;
}

button {
    padding: 0;
    border: none;
    background-color: inherit;
}

h1,
h2,
p {
    color: #FFEF82;
}

a {
    text-decoration: none!important;
}

.home,
.social-links {
    display:grid;
    gap: 1.5rem;
    align-content: center;
    justify-items: center;
}

.personal {
    text-align: center;
}

.card {
    border: 2px solid #423F3E!important;
    background-color: #171010!important;
}

.terminal {
    width: 70%;
}

.prompt {
    color: #FFFFFF;
    
}
.prompt > span:first-child {
    color: var(--main-prompt-color);
}

.redirect,
.prompt > span:nth-child(2) {
    color: #6197cd;
}
/* ANIMATION */
.command {
    position: relative;
}

.command::before,
.command::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.command::before {
    background-color: #171010;
    animation: writer 4s steps(23) forwards;
}

.command::after {
    width:12px;
    background-color: var(--main-prompt-color);
    animation: writer 4s steps(23) forwards,
               opacityOn 5s steps(1) forwards;
}

@keyframes writer {
    to { 
    left: 100%; 
    }
}


.output {
    animation: opacityOff 5s steps(1) forwards;
}

@keyframes opacityOn {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@keyframes opacityOff {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.content-appear {
    animation: opacityOff 1s normal forwards;
}

/*------------*/
.content { 
    width: 80%;
    position: absolute!important;
    visibility: hidden;
    opacity: 0;
}

.icon {
    font-size: 4.5rem;
    font-weight: 300;
}

